--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=firstspringboot
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+# spring.data.mongodb.host=localhost
+# spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://himanshujava:y9jbjEmF5H8zy1yJ@cluster0.gjfylo1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
