Spring Security done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.application.name=firstspringboot
 spring.data.mongodb.uri=mongodb+srv://himanshujava:y9jbjEmF5H8zy1yJ@cluster0.gjfylo1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
+spring.main.allow-circular-references=true
