--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,3 @@
-
 spring:
   main:
     allow-circular-references: true
@@ -14,3 +13,15 @@ server:
   port: 8081
   servlet:
     context-path: /application
+
+logging:
+  level:
+    com:
+      himanshu:
+        journalApp:
+          service:
+            UserService: OFF
+    # root: ERROR
+    # com:
+    #   himanshu:
+    #     journalApp: DEBUG
